fixed logo spacing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -24,7 +24,7 @@
 
     &__logo {
         width: 9rem; 
-        margin: 1rem 0rem 1rem 7rem;
+        margin: 1rem 0rem 1rem 1rem;
 
         @include mixins.tablet {
             margin: 1.5rem 0rem;
@@ -69,6 +69,7 @@
         background: url('../../assets/icons/upload.svg') no-repeat scroll 10px 10px;
         @include mixins.uploadButton;
         align-items: center;
+        font-weight: 600;
 
         @include mixins.tablet {
             display: none;
